# prototipo-event-driven

./: docker-compose.yml  pyproject.toml
chats/: main.py  send.py
connect/connect/: settings.py  urls.py
connect/project/: admin.py  forms.py  models.py  send.py  serializers.py  urls.py  views.py
connect/project/migrations/: 0001_initial.py  0002_project_created_on.py  0003_project_sector.py  0004_remove_project_sector_project_template_type.py
connect/project/templates/project/: index.html  project.html
integrations/: consumer.py
integrations/integrations/: asgi.py  settings.py  urls.py  wsgi.py
integrations/project/: models.py
integrations/project/migrations/: 0001_initial.py  0002_project_template_type.py
